--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
    <div class="kv animated fadeInLeft">
        <div class="center">
            <div class="up" style="perspective:500px;">
-               <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">RfK</a></p><hr class="nc">
+               <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">Steam</a></p><hr class="nc">
            </div>
            <div class="cent">
                <p class="st">Iмαgιηє αℓℓ тнє ρєσρℓє<br>ℓινιηg ℓιƒє ιη ρєαcє~</p>
