--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
                <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">Steam</a></p><hr class="nc">
            </div>
            <div class="cent">
-               <p class="st">Iмαgιηє αℓℓ тнє ρєσρℓє<br>ℓινιηg ℓιƒє ιη ρєαcє~</p>
+               <p class="st">Iмαgιηє αℓℓ тнє ρєσρℓє<br>ℓινιηg ℓιƒє ιη ρєαcє~</p>" target="_blank">group</a></p><hr class"nc">
            </div>
 
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
