--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
            <div class="links">
               <ul class="lk2">
                 <p style="display:inline">
-                <li><a href="https://github.com/ORI00" target="_blank"><i class="st">no</a>
-                <li><a href="https://github.com/ORI00" target="_blank"><i class="st">name</a>
-				<li><a href="https://github.com/ORI00" target="_blank"><i class="st">list</a>
-				<li><a href="https://github.com/ORI00" target="_blank"><i class="st">here</a>
+                <li><a href="https://steamcommunity.com/id/Breaking_LBY" target="_blank"><i class="st">Wyzen</a>
+                <li><a href="https://steamcommunity.com/id/lbywalk" target="_blank"><i class="st">Zel</a>
+				<li><a href="https://steamcommunity.com/id/kyuut" target="_blank"><i class="st">Chise</a>
+				<li><a href="https://steamcommunity.com/id/Elaikokara" target="_blank"><i class="st">Wise</a>
               </ul>
            </div>
            </marquee>
