--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
            <div class="cent">
                <p class="st" ><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank">Group</a></p><hr class="nc">
            </div>
-
+	   <div class="cent">
+               <p class="st" ><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank">Group</a></p><hr class="nc">
+	   </div>
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
            <div class="links">
               <ul class="lk2">
