--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
                <p class="st" ><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank">Group</a></p><hr class="nc">
            </div>
 	   <div class="r">
-               <p class="st" ><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank">Youtube</a></p><hr class="nc">
+               <p class="st" ><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank">Youtube</a></p><hr class="nc">
 	   </div>
 	       
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
