--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
 	   <div class="r">
                <p class="st" ><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank">Youtube</a></p><hr class="nc">
 	   </div>
+	        <div class="b">
+               <p class="st" ><a href="" target="_blank">Flux#8392</a></p><hr class="nc">
+	   </div>
 	       
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
            <div class="links">
               <ul class="lk2">
                 <p style="display:inline">
-                <li><a href="https://steamcommunity.com/id/Breaking_LBY" target="_blank"><i class="st">Wyzen</a>
-                <li><a href="https://steamcommunity.com/id/lbywalk" target="_blank"><i class="st">Zel</a>
+                <li><a href="" target="_blank"><i class="st"></a>
+                <li><a href="https://steamcommunity.com/id/lbywalk" target="_blank"><i class="st"></a>
 				<li><a href="https://steamcommunity.com/id/kyuut" target="_blank"><i class="st">Chise</a>
 				<li><a href="https://steamcommunity.com/id/Elaikokara" target="_blank"><i class="st">Wise</a>
               </ul>
