--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
                <p class="st" ><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank">Youtube</a></p><hr class="nc">
 	   </div>
 	        <div class="b">
-               <p class="st" ><a href="Discord.com" target="_blank">Flux#8392</a></p><hr class="nc">
+               <p class="st" ><a href="https://discordapp.com/channels/@me" target="_blank">Flux#8392</a></p><hr class="nc">
 	   </div>
 	       
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
