--- a/index.html
+++ b/index.html
@@ -49,12 +49,17 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
 				<li><a href="https://steamcommunity.com/id/Elaikokara" target="_blank"><i class="st">Wise</a>
               </ul>
            </marquee>
-	   
+	   </div>			
            <hr>
-     
+       </div>
+   </div>
     <script>
     new WOW().init();
     </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
