--- a/index.html
+++ b/index.html
@@ -27,17 +27,8 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
    <div class="kv animated fadeInLeft">
        <div class="center">
            <div class="up" style="perspective:500px;">
-               <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">Steam</a></p><hr class="nc">
-           </div>
-           <div class="cent">
-               <p class="st" ><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank">Group</a></p><hr class="nc">
-           </div>
-	   <div class="r">
-               <p class="st" ><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank">Youtube</a></p><hr class="nc">
-	   </div>
-	        <div class="b">
-               <p class="st" ><a href="https://discordapp.com/channels/@me" target="_blank">Flux#8392</a></p><hr class="nc">
-	   </div>
+               <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">domain</a></p><hr class="nc">
+         
 	       
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
            <div class="links">
