--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
            <div class="links">
               <ul class="lk2">
                 <p style="display:inline">
-                <li><a href="" target="_blank"><i class="st"></a>
-                <li><a href="https://steamcommunity.com/id/lbywalk" target="_blank"><i class="st"></a>
-				<li><a href="https://steamcommunity.com/id/kyuut" target="_blank"><i class="st">Chise</a>
-				<li><a href="https://steamcommunity.com/id/Elaikokara" target="_blank"><i class="st">Wise</a>
+                <li><a href="https://steamcommunity.com/id/lachbombe" target="_blank"><i class="st">Steam</a>
+                <li><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank"><i class="Youtube"></a>
+				<li><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank"><i class="Group"></a>
+				<li><a href="" target="_blank"><i class="st"></a>
               </ul>
            </marquee>
 	   </div>			
