--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
               <ul class="lk2">
                 <p style="display:inline">
                 <li><a href="https://steamcommunity.com/id/lachbombe" target="_blank"><i class="st">Steam</a>
-                <li><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank"><i class="Youtube"></a>
-				<li><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank"><i class="Group"></a>
+                <li><a href="https://www.youtube.com/channel/UC949FqWbxLYvGAH648N_S_A?view_as=subscriber" target="_blank">Youtube<i class=""></a>
+				<li><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank"><i class="Group">Group</a>
 				<li><a href="" target="_blank"><i class="st"></a>
               </ul>
            </marquee>
