--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
 			
 				<li><a href="https://steamcommunity.com/groups/vermeintlich" target="_blank"><i class="Group">    Group    </a>
 					
-				<li><a href="" target="_blank"><i class="st"></a>
+				<li><a href="m" target="_blank"><i class="st"></a>
               </ul>
            </marquee>
 	   </div>			
