--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ oncontextmenu="return false" onselectstart="return false" onselect="return false
    <div class="kv animated fadeInLeft">
        <div class="center">
            <div class="up" style="perspective:500px;">
-               <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">domain</a></p><hr class="nc">
+               <p class="Steam" ><a href="https://steamcommunity.com/id/lachbombe" target="_blank">FLUX</a></p><hr class="nc">
          
 	       
             <marquee scrolldelay=30 onmouseover="this.stop()" onmouseout="this.start()">
